# ifc_to_3dtiles

./: .gitignore  Cargo.toml  README.md  history.md  run.bat  使用方式.md
config/: semantic_rules.default.json
docs/superpowers/plans/: 2026-05-19-local-project-ingest-publish.md  2026-05-20-phase-1b-oda-conversion-smoke.md  2026-05-20-phase2a-visual-geometry-quality.md
docs/superpowers/specs/: 2026-05-20-phase2a-visual-geometry-quality-design.md
revit_bridge/: ExportApplication.cs  RvtToGlb.RevitIfcExporter.csproj
src/: b3dm.rs  cad_conversion.rs  cad_entity_inspect.rs  cad_metadata.rs  convert.rs  crs.rs  fingerprint.rs  geometry.rs  geometry_preview.rs  georef.rs  glb.rs  glb_tiles.rs  ifc_info.rs  inspect.rs  inspect_drilldown.rs  inspect_review.rs  lib.rs  main.rs  model.rs  project.rs  publish_skeleton.rs  revit.rs  runtime_geometry.rs  runtime_metadata.rs  runtime_publish.rs  rvt.rs  rvt_job.rs  spatial_pick.rs  spatial_qa.rs  step.rs  tiles.rs
tests/: core.rs  project_pipeline.rs  rvt_integration.rs
tools/: check_semantic_guardrail.ps1  convert_cad_with_oda.ps1  export_inspect_review.ps1  fix_b3dm_axis.ps1  inspect_cad_sources.ps1  inspect_normalized_cad.ps1  phase2a_preview_screenshot.mjs  prepare_three_vendor.ps1  run_phase1c_dxf_entity_inspect.ps1  run_phase1e_drilldown.ps1  run_phase1f_publish_skeleton.ps1  run_phase1f_viewer.ps1  run_phase1h_runtime_publish.ps1  run_phase1k_geometry_preview.ps1  run_phase2a_preview_screenshot.ps1  test_phase1g_pick_accuracy.js  verify_index_page.ps1
